Fix css: td thumbnail element: le background ne se repete pas, vertical align top.

--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -504,8 +504,10 @@ li.element span.element_name
 li.element td.element_thumbnail
 {
   background-image: url(/bundles/muzichcore/img/nothumb.png);
+  background-repeat: no-repeat;
   width: 120px;
   height: 90px;
+  vertical-align: top;
 }
 
 li.element img.element_thumbnail
